--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,25 @@
 
     <string name="chat">Chat</string>
 
+    <string name="unknown_status">Unknown status</string>
+    <string name="connected_status">Connected to server</string>
+    <string name="error_status">Error status</string>
+    <string name="server_address">Server address:</string>
+    <string name="default_server_address">http://192.168.0.107:8000/serverapp</string>
+    <string name="author">Author:</string>
+    <string name="message">Message:</string>
+    <string name="connect">Connect</string>
+
+
+    <string name="contacts">Contacts</string>
+
+
+
+
+
+
+
+
 
 
 </resources>
